# typst

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: release.yml
config/: config.exs
lib/: format.ex  typst.ex  typst_nif.ex
lib/format/: table.ex
native/typst_nif/: Cargo.toml  Cross.toml  README.md
native/typst_nif/.cargo/: config.toml
native/typst_nif/src/: lib.rs
test/: format_test.exs  typst_test.exs
test/format/: table_test.exs
