[package]
name = "typst_nif"
version = "0.1.7"
authors = ["Herman verschooten"]
edition = "2021"

[lib]
name = "typst_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
comemo = "0.4"
rustler = { version = "0.36", default-features = false, features = ["derive"] }
tar = "0.4.43"
time = "0.3.36"
ttf-parser = "0.25.0"
typst = "0.14"
typst-kit = { version = "0.14", default-features = false, features = [ "embed-fonts" ] }
typst-pdf = "0.14"
typst-render = "0.14"
ureq = "2.10.1"
zune-inflate = "0.2.54"

# And then, your features.
[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[build.env]
passthrough = ["RUST_MIN_STACK"]
